--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,46 +8,112 @@
     tools:context="com.example.nirjon.bledemo4_advertising.MainActivity">
 
     <TextView
-        android:text="Broadcast BLE Advertisement:"
-        android:textStyle="bold"
-        android:textColor="#000081"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/broadcast_ble_advertisement"
+        android:textColor="#000081"
+        android:textStyle="bold" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left">
+
+        <EditText
+            android:id="@+id/rawAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:digits="0123456789abcdefABCDEF"
+            android:hint="rawAddress"
+            android:inputType="textPersonName"
+            android:maxLength="14"
+            android:text="77 62 4d 53 45" />
+
+        <EditText
+            android:id="@+id/time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:digits="0123456789"
+            android:hint="time ms"
+            android:inputType="textPersonName"
+            android:maxLength="5"
+            android:text="1000" />
+
+        <CheckBox
+            android:id="@+id/hexdata"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="HEX Data" />
+
+
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="left">
 
     <Switch
-        android:text="Enable Advertising: "
         android:id="@+id/switchID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
-    />
+        android:text="Enable Advertising: "
+        android:textSize="18sp" />
+
+        <EditText
+            android:id="@+id/myData"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:digits="0123456789abcdefABCDEF"
+            android:hint="Data"
+            android:inputType="textPersonName"
+            android:maxLength="2"
+            android:text="" />
+
+</LinearLayout>
 
     <TextView
         android:id="@+id/tv"
-        android:text="Ready to advertise."
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:textSize="17sp" />
 
+
+    <EditText
+        android:id="@+id/line"
+        android:layout_width="match_parent"
+        android:layout_height="2mm"
+        android:clickable="false" />
+
+    <EditText
+        android:id="@+id/bleCommandPrefex"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
-        android:text="Receive BLE Advertisement:"
-        android:textStyle="bold"
-        android:textColor="#000081"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/receive_ble_advertisement"
+        android:textColor="#000081"
+        android:textStyle="bold"
+        android:visibility="invisible" />
 
     <Switch
-        android:text="Enable Receiving: "
         android:id="@+id/switchIDR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="false"
-        />
+        android:text="@string/enable_receiving"
+        android:visibility="invisible" />
 
     <TextView
         android:id="@+id/tvr"
-        android:text="Ready to receive."
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/ready_to_receive"
+        android:visibility="invisible" />
 
 </LinearLayout>
